# trademe-sdk

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/examples/: demo.py  login_demo.py
src/scripts/: get-consolidated-doc.sh
src/trademe_sdk/: __init__.py  __main__.py  auth_flow.py  auth_helpers.py  client.py  config.py  errors.py
